refactor: add user's role and resource cache